# signals2

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam
.github/workflows/: ci.yml
doc/: Makefile  design.xml  examples.xml  faq.xml  introduction.xml  porting.xml  rationale.xml  signals.xml  tests.xml  thread_safety.xml  tutorial.xml
doc/doxygen/: Doxyfile  main_doxygen.h
doc/reference/: auto_threaded.xml  connection.xml  deconstruct.xml  deconstruct_ptr.xml  dummy_mutex.xml  last_value.xml  lightweight_mutex.xml  multi_threaded.xml  mutex.xml  optional_last_value.xml  postconstructible.xml  predestructible.xml  reference.xml  shared_connection_block.xml  signal_base.xml  signal_header.xml  signal_type.xml  single_threaded.xml  slot.xml  slot_base.xml  track.xml  trackable.xml  visit_each.xml
doc/snippets/: block_code_snippet.txt  disconnect_code_snippet.txt
example/: Jamfile.v2  custom_combiners.cpp  disconnect_and_block.cpp  doc_view.cpp  doc_view_acm.cpp  doc_view_acm_deconstruct.cpp  hello_world_multi_slot.cpp  hello_world_slot.cpp  ordering_slots.cpp  passing_slots.cpp  signal_return_value.cpp  slot_arguments.cpp
include/boost/: signals2.hpp
include/boost/signals2/: auto_threaded.hpp  mutex.hpp  (+18 more)
test/: CMakeLists.txt  Jamfile.v2  connection_test.cpp  dead_slot_test.cpp  deadlock_regression_test.cpp  deconstruct_test.cpp  deletion_test.cpp  invocation_benchmark.cpp  mutex_test.cpp  ordering_test.cpp  regression_test.cpp  signal_n_test.cpp  signal_test.cpp  signal_type_test.cpp  threading_models_test.cpp  track_test.cpp  trackable_test.cpp
(+32 files in other folders)
